--- a/sliding_window.ipynb
+++ b/sliding_window.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "[2.2, 2.8, 2.4, 3.6, 2.8]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,8 +54,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time: O(n*k)\n",
+    "\n",
+    "Space: O(1) (Not including required space for return array)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +97,7 @@
        "[2.2, 2.8, 2.4, 3.6, 2.8]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,8 +107,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time: O(n)\n",
+    "\n",
+    "Space: O(1) (Not including required space for return array)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +145,7 @@
        "True"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +222,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Time: O(n)\n",
+    "    \n",
+    "Space: O(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Smallest Subarray with a given sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smallest_subarray(s, arr):\n",
+    "    import math\n",
+    "    \n",
+    "    l, r = 0, 1\n",
+    "    running_sum = arr[0]\n",
+    "    min_len = math.inf\n",
+    "    \n",
+    "    while (r<len(arr) or running_sum>s) and l < r:\n",
+    "        if running_sum < s:\n",
+    "            running_sum += arr[r]\n",
+    "            r += 1\n",
+    "        else:\n",
+    "            min_len = min(min_len, r-l)\n",
+    "            running_sum -= arr[l]\n",
+    "            l += 1\n",
+    "    \n",
+    "    return min_len "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smallest_subarray(7, [2, 1, 5, 2,8])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time: O(n) - the i, j variable encounter each element at most twice giving O(2n)=O(n) time complexity\n",
+    "\n",
+    "Space: O(1)"
    ]
   },
   {
@@ -212,27 +293,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def smallest_subarray(s, arr):\n",
-    "    import math\n",
-    "    \n",
-    "    l, r = 0, 0\n",
-    "    running_sum = arr[0]\n",
-    "    min_sum = -math.inf\n",
-    "    \n",
-    "    while l < len(arr) and l != r:\n",
-    "        if running_sum < s:\n",
-    "            r += 1\n",
-    "            running_sum += arr[r]\n",
-    "        elif running_sum > s:\n",
-    "            r\n",
-    "            \n",
-    "        \n",
-    "        "
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -249,6 +314,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
