Finished substrning problem

--- a/sliding_window.ipynb
+++ b/sliding_window.ipynb
@@ -8,6 +8,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem Statement: Given an array, find the average of all contiguous subarrays of size ‘K’ in it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Brute force is as follows:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -57,9 +71,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time: O(n*k)\n",
+    "**Time: O(n*k)**\n",
     "\n",
-    "Space: O(1) (Not including required space for return array)"
+    "**Space: O(1) (Not including required space for return array)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With a sliding window, we can do better"
    ]
   },
   {
@@ -110,9 +131,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time: O(n)\n",
+    "**Time: O(n)**\n",
     "\n",
-    "Space: O(1) (Not including required space for return array)"
+    "**Space: O(1)** (Not including required space for return array)"
    ]
   },
   {
@@ -159,6 +180,20 @@
    "metadata": {},
    "source": [
     "## Maximum Sum Subarray of Size K"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem Statement: Given an array of positive numbers and a positive number ‘k’, find the maximum sum of any contiguous subarray of size ‘k’."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pretty easy and natural sliding window approach:"
    ]
   },
   {
@@ -222,9 +257,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time: O(n)\n",
+    "**Time: O(n)**\n",
     "    \n",
-    "Space: O(1)"
+    "**Space: O(1)**"
    ]
   },
   {
@@ -235,33 +270,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem Statement: Given an array of positive numbers and a positive number ‘S’, find the length of the smallest contiguous subarray whose sum is greater than or equal to ‘S’. Return 0, if no such subarray exists."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simple variable length sliding window with ugly edge case handling."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def smallest_subarray(s, arr):\n",
     "    import math\n",
     "    \n",
-    "    l, r = 0, 1\n",
+    "    l, r = 0, 0\n",
     "    running_sum = arr[0]\n",
     "    min_len = math.inf\n",
     "    \n",
-    "    while (r<len(arr) or running_sum>s) and l < r:\n",
+    "    while (r < len(arr) and l <= r):\n",
     "        if running_sum < s:\n",
-    "            running_sum += arr[r]\n",
     "            r += 1\n",
+    "            try:\n",
+    "                running_sum += arr[r]\n",
+    "            except:\n",
+    "                pass\n",
     "        else:\n",
-    "            min_len = min(min_len, r-l)\n",
+    "            min_len = min(min_len, r-l+1)\n",
     "            running_sum -= arr[l]\n",
     "            l += 1\n",
-    "    \n",
-    "    return min_len "
+    "    return min_len"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -270,30 +321,143 @@
        "1"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "smallest_subarray(7, [2, 1, 5, 2,8])"
+    "smallest_subarray(4, [1, 2, 3, 10])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time: O(n) - the i, j variable encounter each element at most twice giving O(2n)=O(n) time complexity\n",
+    "**Time: O(n)** - the i, j variable encounter each element at most twice giving O(2n)=O(n) time complexity\n",
     "\n",
-    "Space: O(1)"
+    "**Space: O(1)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cleaner solution with no need for explicit edge case handling "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Cleaner solution\n",
+    "import math\n",
+    "\n",
+    "def smallest_subarray_clean(s, arr):\n",
+    "    running_sum, l = 0, 0\n",
+    "    min_len = math.inf\n",
+    "    \n",
+    "    for r in range(0, len(arr)):\n",
+    "        running_sum += arr[r]\n",
+    "        \n",
+    "        while running_sum >= s:\n",
+    "            min_len = min(min_len, r-l+1)\n",
+    "            running_sum -= arr[l]\n",
+    "            l += 1\n",
+    "    \n",
+    "    return min_len if min_len != math.inf else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smallest_subarray_clean(4, [1, 2, 3, 10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Longest Substring with K Distinct Characters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Problem Statement**: Given a string, find the length of the longest substring in it with no more than K distinct characters.\n",
+    "\n",
+    "https://leetcode.com/problems/longest-substring-with-at-most-k-distinct-characters/  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A brute force enumeration can be used here. This would enumerate all $\\sum_{j=1}^{n} {n \\choose j}$ substrings. By the binomial theorem, this sum is $2^{n}$ and so our time complexity would be exponential. Using a sliding window, we can do better."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "def longest_substring_with_k_distinct(s, k):\n",
+    "    from collections import Counter\n",
+    "    l = 0\n",
+    "    running_len = 0\n",
+    "    max_len = 0\n",
+    "    seen = Counter()\n",
+    "\n",
+    "    for r in range(len(s)):\n",
+    "        seen[s[r]] += 1\n",
+    "        running_len += 1\n",
+    "\n",
+    "        while len(seen.keys()) > k: # Loop invariant is violated - fix it\n",
+    "            seen[s[l]] -= 1\n",
+    "            if seen[s[l]] == 0: del seen[s[l]]\n",
+    "            l += 1\n",
+    "            running_len -= 1\n",
+    "\n",
+    "        max_len = max(max_len, running_len)\n",
+    "\n",
+    "    return max_len"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This algorithm is correct because the loop invariant ensures the window under consideration is a valid one (i.e. has k or fewer distinct elements). We consider each such valid window and keep track of the maximum one. If we violate the variant, the while loop executes and restores the invariant by decreasing the window size from the left and only then compares the substring length to the previous maximum substring length. Its clear that the largest len substring will be found because the window is \"greedy\" in the sense that it will keep increasing the substring until a violation of the invariant occurs. Hence the longest substring will be found."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Time**: Each element is encoutnered at most twice hence **O(n)** time. The len function might seem like it might be O(n) but actually len for most collection data structures in python is O(1) time.\n",
+    "\n",
+    "**Space**: We keep a Counter dictionary to keep track of counts hence **O(n)** space"
+   ]
   }
  ],
  "metadata": {
