at char replacement problem

--- a/sliding_window.ipynb
+++ b/sliding_window.ipynb
@@ -456,8 +456,114 @@
    "source": [
     "**Time**: Each element is encoutnered at most twice hence **O(n)** time. The len function might seem like it might be O(n) but actually len for most collection data structures in python is O(1) time.\n",
     "\n",
-    "**Space**: We keep a Counter dictionary to keep track of counts hence **O(n)** space"
+    "**Space**: We keep a Counter dictionary to keep track of counts and there can be at most k+1 items in this dictionary hence **O(k)** space"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fruits into Baskets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Problem Statement**: Given an array of characters where each character represents a fruit tree, you are given two baskets and your goal is to put maximum number of fruits in each basket. The only restriction is that each basket can have only one type of fruit.\n",
+    "\n",
+    "You can start with any tree, but once you have started you can’t skip a tree. You will pick one fruit from each tree until you cannot, i.e., you will stop when you have to pick from a third fruit type.\n",
+    "\n",
+    "Write a function to return the maximum number of fruits in both the baskets.\n",
+    "\n",
+    "https://leetcode.com/problems/fruit-into-baskets/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this problem is just the previous one with k = 2 but dressed up in a distracting backstory. Be very aware of this type of interview question tactic as it shows up often. You need to ignore the fluff and simplify the problem down to the core problem at hand which is the \"Longest Substring with K Distinct Characters\" problem. This skill of simplifying down is just as important as the actual algorithmic problem solving part."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def totalFruit(tree):\n",
+    "    return longest_substring_with_k_distinct(s, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time is same as before, space is O(1) since k=2 now"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## No-repeat Substring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem Statement: Given a string, find the length of the longest substring which has no repeating characters.\n",
+    "\n",
+    "https://leetcode.com/problems/longest-substring-without-repeating-characters/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lengthOfLongestSubstring(s):\n",
+    "    l, max_len = 0, 0\n",
+    "    seen = {}\n",
+    "    \n",
+    "    for r, c in enumerate(s):\n",
+    "        if c in seen:\n",
+    "            if seen[c] >= l:\n",
+    "                l = seen[c] + 1\n",
+    "                \n",
+    "        seen[c] = r\n",
+    "        max_len = max(max_len, r-l+1)\n",
+    "        \n",
+    "    return max_len  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The correctness of the algorithm is ensured since, by the loop invariant that we maintain, at the end of the loop, we always have a distinct substring of letters and we are greedily expanding our window thus the maximum distinct substring is guaranteed to be considered. All we need to do is simply keep track of the maximum of all such distinct substrings we see to get the answer.\n",
+    "\n",
+    "The only trickiness here compared to the previous 2 problems is that the sliding window \"jumps\" to shrink. We keep track of all the latest indices we've seen thus far for each character encountered. If we encounter the same character again, we now *potentially* have a repeat. Note that its only potential because if that character is before l (i.e. out of the sliding window) then it does not affect the uniqueness of our sliding window and we *don't* shrink the window. However, if the repeat character *is* in the sliding window (i.e. seen[c] >= l), then we must shrink our window so this character is no longer there (i.e. l = seen[c] + 1). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Time**: We only go through the string once hence **O(n)**.\n",
+    "\n",
+    "**Space**: The dictionary we have keep track of the unique elements hence **O(k)** where k is the number of unique elements. If s is all unique, the space will be O(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
