challenge problem 1 complete

--- a/sliding_window.ipynb
+++ b/sliding_window.ipynb
@@ -559,6 +559,163 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Longest Repeating Character Replacement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Problem Statement**: https://leetcode.com/problems/longest-repeating-character-replacement/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def characterReplacement(s, k):\n",
+    "    from collections import Counter\n",
+    "\n",
+    "    l, max_len, max_repeat = 0, 0, 0\n",
+    "    seen = Counter()\n",
+    "\n",
+    "    for r, rc in enumerate(s):\n",
+    "        seen[rc] += 1\n",
+    "        max_repeat = max(max_repeat, seen[rc])\n",
+    "\n",
+    "        if (r-l+1-max_repeat) > k: \n",
+    "            seen[s[l]] -= 1\n",
+    "            l += 1\n",
+    "\n",
+    "        max_len = max(max_len, r-l+1)\n",
+    "\n",
+    "    return max_len"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that max_repeat here is *not* keeping track of the current max element of the sliding window. Rather it is a historical max. This is fine because we're only interested in the max substring and this only depends on the historical max (i.e. any substring which does not contain the historical max repeated characters will not be the max substring). So when are window does not contain the historical max, we are moving the window to the right one step at a time. Once we reach a max_repeat greater than the historical max_repeat, we can start increasing our window size again. Overall this solution to the problem is ugly since it doesn't follow intuition and a lot of seemingly incorrect behavior is occurring but in the end, it does indeed keep track of the max substring and thats all we care about.\n",
+    "\n",
+    "The best way to think about the sliding window is as follows: We greedily expand until we hit the maximum possible substring. After this we are simply shifting the window to the right one place at a time until the max_repeat character hits a new max and we can then increase our window size once again. The window size only increases or stays the same, and never decreases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Time**: **O(n)** since we encounter each element only once and all the ops in the for loop are constant time\n",
+    "\n",
+    "**Space**: **O(1)** since we store at most 26 keys in the Counter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Longest Subarray with Ones after Replacement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Problem Statement**: https://leetcode.com/problems/max-consecutive-ones-iii/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longestOnes(A, K):\n",
+    "    l, max_len = 0, 0\n",
+    "    ones_count = 0\n",
+    "\n",
+    "    for r in range(len(A)):\n",
+    "        if A[r] == 1: ones_count += 1\n",
+    "\n",
+    "        if r-l+1-ones_count > K: # If the number of zeros is greater than k, shrink window\n",
+    "            if A[l] == 1: ones_count -= 1\n",
+    "            l += 1\n",
+    "\n",
+    "        max_len = max(max_len, r-l+1)\n",
+    "\n",
+    "    return max_len"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a simpler version of the above problem. The only possible elements we can replace are the 0's so we only need to keep track of the 1's (as opposed to keeping keeping track of counts of all distinct elements and updating the max_repeat as in the above problem).\n",
+    "\n",
+    "The idea is the same as before. We keep greedily expanding the window as long as it's valid (i.e. the number of 0's in the window is less than or equal to k). If it is no longer valid, we shift the window to the right by one spot and try expanding again. It's clear the maximum subarray will be considered in this way and that max_len will keep track of it once it is encounterd."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time and space same as previous problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Permutation in String"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem Statement: https://leetcode.com/problems/permutation-in-string/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This brute force O(n*k) solution uses a sliding window but the dict comparison is O(k) which detoriorates the time complexity from the optimal O(n). Let us do better than this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checkInclusion(s1, s2):\n",
+    "    from collections import Counter\n",
+    "    s1_map, s2_map = Counter(s1), Counter()\n",
+    "    count = 0\n",
+    "    l = 0\n",
+    "\n",
+    "    for r, rc in enumerate(s2):\n",
+    "        s2_map[rc] += 1\n",
+    "        count += 1\n",
+    "\n",
+    "        if count > len(s1):\n",
+    "            lc = s2[l]\n",
+    "            s2_map[lc] -= 1\n",
+    "            if s2_map[lc] == 0: del s2_map[lc]\n",
+    "            count -= 1\n",
+    "            l += 1\n",
+    "\n",
+    "        if s2_map == s1_map: return True\n",
+    "    return False"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
