finished sliding window problems

--- a/sliding_window.ipynb
+++ b/sliding_window.ipynb
@@ -682,37 +682,245 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This brute force O(n*k) solution uses a sliding window but the dict comparison is O(k) which detoriorates the time complexity from the optimal O(n). Let us do better than this"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def checkInclusion(s1, s2):\n",
     "    from collections import Counter\n",
     "    s1_map, s2_map = Counter(s1), Counter()\n",
-    "    count = 0\n",
     "    l = 0\n",
     "\n",
     "    for r, rc in enumerate(s2):\n",
     "        s2_map[rc] += 1\n",
-    "        count += 1\n",
     "\n",
-    "        if count > len(s1):\n",
+    "        if r >= len(s1):\n",
     "            lc = s2[l]\n",
     "            s2_map[lc] -= 1\n",
     "            if s2_map[lc] == 0: del s2_map[lc]\n",
-    "            count -= 1\n",
     "            l += 1\n",
     "\n",
     "        if s2_map == s1_map: return True\n",
     "    return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Time: O(n)** because both s2_map and s1_map will be 26 keys at most and so the equality check is O(1)\n",
+    "\n",
+    "**Space: O(1)** since s1_map and s2_map are O(26) at most."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## String Anagrams"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem Statment: https://leetcode.com/problems/find-all-anagrams-in-a-string/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findAnagrams(s, p):\n",
+    "    from collections import Counter\n",
+    "\n",
+    "    p_map, s_map = Counter(p), Counter()\n",
+    "    l = 0\n",
+    "    ret = []\n",
+    "\n",
+    "    for r, rc in enumerate(s):\n",
+    "        s_map[rc] += 1\n",
+    "\n",
+    "        if r >= len(p):\n",
+    "            lc = s[l]\n",
+    "            s_map[lc] -= 1\n",
+    "            if s_map[lc] == 0: del s_map[lc]\n",
+    "            l += 1\n",
+    "\n",
+    "        if s_map == p_map:\n",
+    "            ret.append(l)\n",
+    "\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this problem is almost exactly the same as above except now we are simply trying to track ALL such permutations encountered rather than just returning after we encounter the first one. So all we have to change is the eqaulity check: instead of returning true we simply keep track of the start index of the window (l) as that is what the question wants."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time and space complexity are the same as above (not counting the required extra return array for the space)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Minimum Window Substring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem Statement: https://leetcode.com/problems/minimum-window-substring/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def minWindow(self, s: str, t: str) -> str:\n",
+    "    from collections import Counter\n",
+    "\n",
+    "    l, matched, l_ind = 0, 0, 0\n",
+    "    min_len = math.inf\n",
+    "    t_counter = Counter(t)\n",
+    "\n",
+    "    for r, rc in enumerate(s):\n",
+    "        if rc in t_counter:\n",
+    "            t_counter[rc] -= 1\n",
+    "            if t_counter[rc] >= 0:\n",
+    "                matched += 1\n",
+    "\n",
+    "        # Note that we exit this loop as soon as we lo longer have a \n",
+    "        # valid window. The search to make it valid begins again at this point\n",
+    "        # with an updated left side of the window.\n",
+    "        while matched == len(t):\n",
+    "            # First we update the min\n",
+    "            if r-l+1 < min_len:\n",
+    "                min_len = r-l+1\n",
+    "                l_ind = l\n",
+    "\n",
+    "            # Now we shrink the window. If we already have the minimum\n",
+    "            # window, this loop will not run again. Otherwise, we shrink until\n",
+    "            # we remove the minimal value the makes the window valid.\n",
+    "            lc = s[l]\n",
+    "            l += 1\n",
+    "\n",
+    "            if lc in t_counter:\n",
+    "                 # t_counter[c] will either be negative or 0 if we've reached this stage. If it's 0\n",
+    "                 # that means increasing l makes the window invalid and therefore we will be exiting the loop\n",
+    "                if t_counter[lc] == 0:\n",
+    "                    matched -= 1\n",
+    "                t_counter[lc] += 1\n",
+    "\n",
+    "    return \"\" if min_len == math.inf else s[l_ind:l_ind+min_len]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The correctness follows because at each expansion of the sliding window, it will try shrinking itself to the smallest possible valid window. Therefore, the smallest such window will undoudtedly be encountered and tracked via min_len and l_ind"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Time**: At most each character is considered twice so **O(n)**\n",
+    "\n",
+    "**Space**: The Counter takes **O(k)** space where k is the number of unique letters in t."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Substring with Concatenation of All Words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem Statement: https://leetcode.com/problems/substring-with-concatenation-of-all-words/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findSubstring(s, words):\n",
+    "    from collections import Counter\n",
+    "\n",
+    "    if not words or not s:\n",
+    "        return []\n",
+    "\n",
+    "    word_map = Counter(words)\n",
+    "    word_count = len(words)\n",
+    "    word_len = len(words[0])\n",
+    "    ret = []\n",
+    "\n",
+    "    for l in range( (len(s)-word_count*word_len)+1):\n",
+    "        word_seen = Counter() # This Counter will start fresh for each start index l under consideration\n",
+    "\n",
+    "        for r in range(word_count): \n",
+    "            nw_ind = l + r*word_len\n",
+    "            nw = s[nw_ind:nw_ind+word_len]\n",
+    "\n",
+    "            if nw not in word_map: # We found a word that's not in words, break, this is not a solution\n",
+    "                break\n",
+    "\n",
+    "            word_seen[nw] += 1\n",
+    "\n",
+    "            if word_seen[nw] > word_map[nw]: # Counted too many of the same word, break, this is not a solution.\n",
+    "                break\n",
+    "\n",
+    "            if r+1 == word_count: # All words are in word_seen now and none of them appear more than neccessary.\n",
+    "                ret.append(l)\n",
+    "\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One of the key factors that ensure the correctness of this algorithm is that all words have the same length. Because of this, we can jump word_len by word_len and keep considering each candidate word for each index in the string. If we are able to match all words starting at some position l, then this result gets added to the return array. If even one of the words is not there, or if we count too many of a single word (as seen in the condition word_seen[nw] > word_map[nw]). Overal this is a fairly straightforward algorithm but also not very efficient. However, given the restrictions of the problem, it is an optimal one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Time**: **O(len(s) * len(words) * len(words[k])** where k is arbitrary since all words have the same length\n",
+    "\n",
+    "**Space**: Two hash maps having at most q entries where **q is the number of unique words in words**. So **O(q)**"
    ]
   },
   {
