top scorer problem

--- a/hash_tables.ipynb
+++ b/hash_tables.ipynb
@@ -319,6 +319,174 @@
    "source": [
     "**Time and Space COmplexity**: Same as before the the O(n) time is now tighter. Before it was O(2n) but now its a tight O(1n). This makes this algorithm ideal for streaming situations as we don't need to keep track of previous elements after we've processed them."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Minimum Window Subsequence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem Statement: https://leetcode.com/problems/minimum-window-subsequence/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minWindow(self, S: str, T: str) -> str:\n",
+    "\n",
+    "    keyword_id_map = {c:i for i, c in enumerate(T)}\n",
+    "\n",
+    "    last_seen = [-1] * len(T)\n",
+    "    dp = [float('inf')] * len(T)\n",
+    "    min_len = float('inf')\n",
+    "    ret_indices = (-1, -1)\n",
+    "\n",
+    "    for i, c in enumerate(S):\n",
+    "        if c in keyword_id_map:\n",
+    "            key_id = keyword_id_map[c]\n",
+    "\n",
+    "            if key_id == 0:\n",
+    "                dp[key_id] = 1\n",
+    "\n",
+    "            else:\n",
+    "                if dp[key_id-1] != float('inf'):\n",
+    "                    distance = i - last_seen[key_id-1]\n",
+    "                    dp[key_id] = dp[key_id-1] + distance\n",
+    "\n",
+    "            last_seen[key_id] = i\n",
+    "\n",
+    "            if key_id == len(T)-1 and dp[key_id] < min_len:\n",
+    "                min_len = dp[key_id]\n",
+    "                ret_indices = (i-min_len+1, i)          \n",
+    "\n",
+    "    return S[ret_indices[0]: ret_indices[1]+1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This works for only unique query strings, need to return to the more difficult version of duplicates allowed in query string...\n",
+    "\n",
+    "Time: O(n) where n is length of S.\n",
+    "\n",
+    "Space: O(3m) = O(m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Top scorer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem Statement: You have a file where each line is a student ID followed by a score they recieved. Return the student with the highest average score on their top 3 exams. The student must have at least 3 exams to be considered."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def top_scorer(file):\n",
+    "    import collections\n",
+    "    import heapq\n",
+    "    \n",
+    "    student_scores = collections.defaultdict(list)\n",
+    "    \n",
+    "    for row in file:\n",
+    "        student_id, score = row.split()\n",
+    "        \n",
+    "        if len(student_scores[student_id]) < 3:\n",
+    "            heapq.heappush(student_scores[student_id], int(score))\n",
+    "        else:\n",
+    "            heapq.heappushpop(student_scores[student_id], int(score))\n",
+    "        \n",
+    "    # Note that the top average score is the same as the sum of the scores since all valid students are\n",
+    "    # required to have the same number of scores (3)\n",
+    "    top_scores = [(name, sum(scores)) for name, scores in student_scores.items() if len(scores)==3]\n",
+    "    return max(top_scores, key=lambda x: x[1])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = [\n",
+    "    \"1 85\",\n",
+    "    \"1 70\",\n",
+    "    \"2 92\",\n",
+    "    \"3 91\",\n",
+    "    \"2 44\",\n",
+    "    \"2 61\",\n",
+    "    \"3 44\",\n",
+    "    \"3 21\",\n",
+    "    \"1 100\",\n",
+    "    \"4 100\",\n",
+    "    \"4 100\",\n",
+    "    \"5 105\",\n",
+    "]\n",
+    "\n",
+    "# Should return student 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_scorer(file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The algorithm is fairly straightforwad. We're just performing a groupby and keeping track of the top 3 scores per student via a min heap. After this calculation is complete, we calculate the sum and return the student with the highest sum (making sure that all students considered have exactly 3 scores)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**time**: O(n) where n is the number of entries in the file\n",
+    "\n",
+    "**space**: O(m) where m is the number of students."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
