--- a/bst_class/Untitled.ipynb
+++ b/bst_class/Untitled.ipynb
@@ -96,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "225"
+       "Node(15, 225)"
       ]
      },
      "execution_count": 5,
@@ -136,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "225"
+       "Node(15, 225)"
       ]
      },
      "execution_count": 7,
@@ -150,71 +150,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_tree[6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(6 in my_tree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(12 in my_tree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(18 in my_tree)"
    ]
